log
Thu May 12 15:45:58 UTC 2022: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  2|4
total_score: 15/70
d369b75
Fri May 13 20:11:25 UTC 2022: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:20: error: ‘j’ undeclared (first use in this function)
     if (n->sudo[i][j] == 0){
                    ^
sudoku.c:49:20: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:64:20: error: ‘nodo’ undeclared (first use in this function); did you mean ‘Node’?
       printf("%d ",nodo->sudo[i][j]);
                    ^~~~
                    Node
sudoku.c:63:11: error: variable ‘j’ set but not used [-Werror=unused-but-set-variable]
       int j=3*(k%3) + (p%3) ;
           ^
sudoku.c:62:11: error: variable ‘i’ set but not used [-Werror=unused-but-set-variable]
       int i=3*(k/3) + (p/3) ;
           ^
cc1: all warnings being treated as errors
Compilation failed
608c143
Fri May 13 20:11:33 UTC 2022: 
 sudoku.c | 4 ----
 1 file changed, 4 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:60:20: error: ‘nodo’ undeclared (first use in this function); did you mean ‘Node’?
       printf("%d ",nodo->sudo[i][j]);
                    ^~~~
                    Node
sudoku.c:60:20: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:59:11: error: variable ‘j’ set but not used [-Werror=unused-but-set-variable]
       int j=3*(k%3) + (p%3) ;
           ^
sudoku.c:58:11: error: variable ‘i’ set but not used [-Werror=unused-but-set-variable]
       int i=3*(k/3) + (p/3) ;
           ^
cc1: all warnings being treated as errors
Compilation failed
83c41a7
Fri May 13 20:11:51 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3516de7
Fri May 13 21:45:55 UTC 2022: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  3|3
total_score: 25/70
fd9a1a8
Fri May 13 21:46:13 UTC 2022: 
 sudoku.c | 9 ++-------
 1 file changed, 2 insertions(+), 7 deletions(-)
 tests:  3|3
total_score: 25/70
c0198dc
Fri May 13 21:48:12 UTC 2022: 
 sudoku.c | Unmerged
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:1: error: version control conflict marker in file
 <<<<<<< HEAD
 ^~~~~~~
sudoku.c:67:7: error: ‘p’ undeclared (first use in this function)
   for(p=0;p<9;p++){
       ^
sudoku.c:67:7: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:68:16: error: ‘k’ undeclared (first use in this function)
       int i=3*(k/3) + (p/3) ;
                ^
sudoku.c:70:20: error: ‘nodo’ undeclared (first use in this function); did you mean ‘Node’?
       printf("%d ",nodo->sudo[i][j]);
                    ^~~~
                    Node
sudoku.c:69:11: error: variable ‘j’ set but not used [-Werror=unused-but-set-variable]
       int j=3*(k%3) + (p%3) ;
           ^
sudoku.c:68:11: error: variable ‘i’ set but not used [-Werror=unused-but-set-variable]
       int i=3*(k/3) + (p/3) ;
           ^
sudoku.c:73:1: error: version control conflict marker in file
 >>>>>>> af16c2fdf0d25c0a2e77b0ac4b1f156491baa6d7
 ^~~~~~~
sudoku.c:75:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
935b44f
Fri May 13 23:10:38 UTC 2022: 
 sudoku.c | 25 ++-----------------------
 1 file changed, 2 insertions(+), 23 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:20: error: ‘j’ undeclared (first use in this function)
     if (n->sudo[i][j] != 1){
                    ^
sudoku.c:49:20: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
96d829d
Fri May 13 23:11:13 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
test.c: In function ‘is_valid’:
sudoku.c:49:19: error: ‘j’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
     if (n->sudo[i][j] != 1){
         ~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
b123aad
Sat May 14 02:29:27 UTC 2022: 
 sudoku.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
332a472
Sat May 14 02:32:42 UTC 2022: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|4
total_score: 10/70
d6e2273
